--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="container navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand me-5" href="#">
-            <img src="/img/Logo.svg" alt="" />
+            <img src="./img/Logo.svg" alt="" />
           </a>
           <button
             class="navbar-toggler text-bg-primary"
@@ -194,12 +194,12 @@
           <!-- Khối trái -->
           <div class="col-md-5 text-center m-md-0">
             <img
-              src="/img/header.svg"
+              src="./img/header.svg"
               alt="Image Description"
               class="img-fluid d-none d-md-inline"
             />
             <img
-              src="/img/header-small.svg"
+              src="./img/header-small.svg"
               alt="Image Description"
               class="img-fluid d-md-none d-sm-inline"
             />
@@ -214,10 +214,7 @@
               goals.
             </p>
             <div class="d-flex d-md-block justify-content-center">
-              <a
-                href="/Home-Sign-Up/index.html"
-                class="btn btn-primary me-2 rounded-pill"
-              >
+              <a href="#" class="btn btn-primary me-2 rounded-pill">
                 <i class="fa-solid fa-user-plus me-1"></i>
                 <div class="d-inline-flex align-items-center">Sign up</div>
               </a>
@@ -241,7 +238,7 @@
               >
                 <img
                   class="img-fluid rounded-circle mb-2"
-                  src="/img/teacher1.jpg"
+                  src="./img/teacher1.jpg"
                   alt="Nguyen Huu Trung"
               /></a>
 
@@ -259,7 +256,7 @@
               <a href="https://www.facebook.com/Kiennguyen9813?locale=vi_VN">
                 <img
                   class="img-fluid rounded-circle mb-2"
-                  src="/img/teacher2.jpg"
+                  src="./img/teacher2.jpg"
                   alt="Nguyen Huu Kien"
               /></a>
 
@@ -277,7 +274,7 @@
               <a href="https://www.facebook.com/ngatsandai?locale=vi_VN">
                 <img
                   class="img-fluid rounded-circle mb-2"
-                  src="/img/teacher3.jpg"
+                  src="./img/teacher3.jpg"
                   alt="Luu Thi Ngat"
               /></a>
 
@@ -297,7 +294,7 @@
               >
                 <img
                   class="img-fluid rounded-circle mb-2"
-                  src="/img/teacher4.jpg"
+                  src="./img/teacher4.jpg"
                   alt="Luu The Tai"
               /></a>
 
@@ -325,7 +322,7 @@
                 >
                   <img
                     class="img-fluid rounded-circle mb-2"
-                    src="/img/teacher1.jpg"
+                    src="./img/teacher1.jpg"
                     alt="Nguyen Huu Trung"
                 /></a>
 
@@ -343,7 +340,7 @@
                 <a href="https://www.facebook.com/Kiennguyen9813?locale=vi_VN"
                   ><img
                     class="img-fluid rounded-circle mb-2"
-                    src="/img/teacher2.jpg"
+                    src="./img/teacher2.jpg"
                     alt="Nguyen Huu Kien"
                 /></a>
 
@@ -361,7 +358,7 @@
                 <a href="https://www.facebook.com/ngatsandai?locale=vi_VN">
                   <img
                     class="img-fluid rounded-circle mb-2"
-                    src="/img/teacher3.jpg"
+                    src="./img/teacher3.jpg"
                     alt="Luu Thi Ngat"
                 /></a>
 
@@ -380,7 +377,7 @@
                   href="https://www.facebook.com/profile.php?id=100085317083108&locale=vi_VN"
                   ><img
                     class="img-fluid rounded-circle mb-2"
-                    src="/img/teacher4.jpg"
+                    src="./img/teacher4.jpg"
                     alt="Luu The Tai"
                 /></a>
 
