--- a/index.html
+++ b/index.html
@@ -431,7 +431,11 @@
               style="background-color: #3ea1fd99"
             >
               <div>
-                <img class="img-fluid me-1" src="/img/Work__icon1.svg" alt="" />
+                <img
+                  class="img-fluid me-1"
+                  src="./img/Work__icon1.svg"
+                  alt=""
+                />
               </div>
               <div class="flex-grow-1 ms-4">
                 <h3 class="fs-5">Search for your timetable</h3>
@@ -440,7 +444,7 @@
                 </p>
                 <!-- Thời khóa biểu -->
                 <a
-                  href="https://drive.google.com/drive/folders/1dY3QKeiB5SaWce4HZbsDUcleoFLdapbI?usp=drive_link"
+                  href="#"
                   class="btn btn-primary rounded-pill d-inline-flex align-items-center justify-content-center"
                 >
                   Learn more
@@ -457,7 +461,7 @@
               <div>
                 <img
                   class="img-fluid me-md-3 me-0"
-                  src="/img/Work__icon2.svg"
+                  src="./img/Work__icon2.svg"
                   alt=""
                 />
               </div>
@@ -484,7 +488,7 @@
               <div>
                 <img
                   class="img-fluid me-md-3 me-0"
-                  src="/img/Work__icon3.svg"
+                  src="./img/Work__icon3.svg"
                   alt=""
                 />
               </div>
@@ -512,7 +516,7 @@
               <div>
                 <img
                   class="img-fluid me-md-3 me-0"
-                  src="/img/Work__icon4.svg"
+                  src="./img/Work__icon4.svg"
                   alt=""
                 />
               </div>
@@ -551,7 +555,7 @@
               style="background-color: #fff"
             >
               <div class="flex-grow-1">
-                <img class="img-fluid" src="/img/nhap.JPG" alt="" />
+                <img class="img-fluid" src="./img/nhap.JPG" alt="" />
                 <p class="small text-secondary mt-2 mb-0">21 November 2021</p>
                 <hr class="my-2" />
                 <h3 class="small">
@@ -573,7 +577,7 @@
               style="background-color: #fff"
             >
               <div class="flex-grow-1">
-                <img class="img-fluid" src="/img/nhap.JPG" alt="" />
+                <img class="img-fluid" src="./img/nhap.JPG" alt="" />
                 <p class="small text-secondary mt-2 mb-0">21 November 2021</p>
                 <hr class="my-2" />
                 <h3 class="small">
@@ -595,7 +599,7 @@
               style="background-color: #fff"
             >
               <div class="flex-grow-1">
-                <img class="img-fluid" src="/img/nhap.JPG" alt="" />
+                <img class="img-fluid" src="./img/nhap.JPG" alt="" />
                 <p class="small text-secondary mt-2 mb-0">21 November 2021</p>
                 <hr class="my-2" />
                 <h3 class="small">
@@ -625,7 +629,7 @@
                 style="background-color: #fff"
               >
                 <div class="flex-grow-1">
-                  <img class="img-fluid" src="/img/nhap.JPG" alt="" />
+                  <img class="img-fluid" src="./img/nhap.JPG" alt="" />
                   <p class="small text-secondary mt-2 mb-0">21 November 2021</p>
                   <hr class="my-2" />
                   <h3 class="small">
@@ -647,7 +651,7 @@
                 style="background-color: #fff"
               >
                 <div class="flex-grow-1">
-                  <img class="img-fluid" src="/img/nhap.JPG" alt="" />
+                  <img class="img-fluid" src="./img/nhap.JPG" alt="" />
                   <p class="small text-secondary mt-2 mb-0">21 November 2021</p>
                   <hr class="my-2" />
                   <h3 class="small">
@@ -669,7 +673,7 @@
                 style="background-color: #fff"
               >
                 <div class="flex-grow-1">
-                  <img class="img-fluid" src="/img/nhap.JPG" alt="" />
+                  <img class="img-fluid" src="./img/nhap.JPG" alt="" />
                   <p class="small text-secondary mt-2 mb-0">21 November 2021</p>
                   <hr class="my-2" />
                   <h3 class="small">
@@ -712,7 +716,7 @@
           <!-- Khối trái -->
           <div class="col-md-5 text-center m-md-0">
             <img
-              src="/img/Download__image.svg"
+              src="./img/Download__image.svg"
               alt="Image Description"
               class="img-fluid w-50 d-none d-md-inline"
             />
@@ -729,9 +733,9 @@
             </p>
             <div class="text-lg-start text-center">
               <a href="#" class="me-3"
-                ><img src="/img/Download__GooglePlay.svg" alt=""
+                ><img src="./img/Download__GooglePlay.svg" alt=""
               /></a>
-              <a href="#"><img src="/img/Download__AppStore.svg" alt="" /></a>
+              <a href="#"><img src="./img/Download__AppStore.svg" alt="" /></a>
             </div>
           </div>
         </div>
@@ -742,7 +746,7 @@
           <!-- Khối trái -->
           <div class="col-md-3 text-center m-md-0">
             <img
-              src="/img/Avatar1.png"
+              src="./img/Avatar1.png"
               alt="Image Description"
               class="img-fluid mb-2"
             />
@@ -751,7 +755,7 @@
           </div>
           <!-- Khối phải -->
           <div class="col-md-8 fs-5" style="color: #2e80d7">
-            <img src="/img/Quotes__user.svg" alt="" />
+            <img src="./img/Quotes__user.svg" alt="" />
             <p class="mb-3">
               The learning environment is very friendly, and the facilities are
               well-equipped, making it comfortable to study. I especially enjoy
@@ -790,7 +794,7 @@
           <div class="col-lg-4">
             <div class="p-3 mb-lg-0 mb-3">
               <a href="#">
-                <img class="img-fluid mb-3" src="/img/Logo.svg" alt="" />
+                <img class="img-fluid mb-3" src="./img/Logo.svg" alt="" />
               </a>
               <p class="text-secondary small">
                 Access valuable knowledge in various fields. Your path to
@@ -909,7 +913,7 @@
               </a>
               <!-- BANK -->
               <a
-                href="/img/QR-BANK.jpg"
+                href="./img/QR-BANK.jpg"
                 class="btn p-0 text-white d-flex align-items-center"
               >
                 <i class="icon-footer fa-solid fa-building-columns"></i>
