--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@
               goals.
             </p>
             <div class="d-flex d-md-block justify-content-center">
-              <a href="#" class="btn btn-primary me-2 rounded-pill">
+              <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSf6f9MIoTXN2jEtaRucJW2LrrACobukVhfOEJ-21N94SIz3gw/viewform?usp=sharing"
+                class="btn btn-primary me-2 rounded-pill"
+              >
                 <i class="fa-solid fa-user-plus me-1"></i>
                 <div class="d-inline-flex align-items-center">Sign up</div>
               </a>
@@ -444,7 +447,7 @@
                 </p>
                 <!-- Thời khóa biểu -->
                 <a
-                  href="#"
+                  href="https://drive.google.com/drive/folders/1dY3QKeiB5SaWce4HZbsDUcleoFLdapbI?usp=drive_link"
                   class="btn btn-primary rounded-pill d-inline-flex align-items-center justify-content-center"
                 >
                   Learn more
