--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -120,7 +120,7 @@
       aria-labelledby="offcanvasMenuLabel"
     >
       <div class="offcanvas-header">
-        <h4>List of Songs (<span id="totalSongsDisplay">0</span>)</h4>
+        <h4>List of Songs</h4>
         <button
           type="button"
           class="btn-close text-reset"
