--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -91,16 +91,16 @@
           Danh sách bài hát (<span id="totalSongs">0</span>)
         </h2>
         <div class="row">
-          <div class="col-md-3 border-end d-none d-lg-block">
+          <div class="col-lg-3 border-end d-none d-lg-block">
             <h4>List of Songs (<span id="totalSongsDisplay">0</span>)</h4>
             <ul id="artistSongList" class="list-group"></ul>
           </div>
-          <div class="col-md-6 border border-dark mb-3">
+          <div class="col-lg-6 border border-dark mb-3">
             <h2 class="text-danger text-center" id="songTitle"></h2>
             <h4 class="text-end" id="songArtist"></h4>
             <p class="text-wrap" id="songLyrics"></p>
           </div>
-          <div class="col-md-3 py-4">
+          <div class="col-lg-3 py-4">
             <p><strong>Number:</strong> <span id="songNumber"></span></p>
             <p><strong>Rating:</strong> <span id="songRating"></span></p>
             <p><strong>Year:</strong> <span id="songYear"></span></p>
