--- a/index.html
+++ b/index.html
@@ -538,6 +538,60 @@
               </div>
             </div>
           </div>
+          <!-- Khối 5 -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex align-items-center p-3 border rounded mb-lg-0 mb-3"
+              style="background-color: #3ea1fd99"
+            >
+              <div>
+                <img
+                  class="img-fluid me-md-3 me-0"
+                  src="./img/Work__icon5.svg"
+                  alt=""
+                />
+              </div>
+              <div class="flex-grow-1 ms-4">
+                <h3 class="fs-5">Got your audio right here!</h3>
+                <p class="small text-secondary">
+                  You're welcome to drop your audio file here at any time.
+                </p>
+                <a
+                  href="https://drive.google.com/drive/folders/1VLnf8H8gup_5IovFrWD6M42Bi-NJzoWP?usp=drive_link"
+                  class="btn btn-primary rounded-pill d-inline-flex align-items-center justify-content-center"
+                >
+                  Learn more
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Khối 6 -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex align-items-center p-3 border rounded mb-lg-0 mb-3"
+              style="background-color: #3ea1fd99"
+            >
+              <div>
+                <img
+                  class="img-fluid me-md-3 me-0"
+                  src="./img/Work__icon6.svg"
+                  alt=""
+                />
+              </div>
+              <div class="flex-grow-1 ms-4">
+                <h3 class="fs-5">Here is your file</h3>
+                <p class="small text-secondary">
+                  Here is your class study material. Review it daily.
+                </p>
+                <a
+                  href="https://drive.google.com/drive/folders/1VJJ7pKSilMkAzYU7uV-8HQYptN58m_tP?usp=drive_link"
+                  class="btn btn-primary rounded-pill d-inline-flex align-items-center justify-content-center"
+                >
+                  Learn more
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- NEW -->
