--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -35,9 +35,15 @@
               class="navbar-nav me-5 mb-2 mb-lg-0 d-flex justify-content-between w-100"
             >
               <!-- Các phần tử khác ở đây -->
+              <!-- Thêm thẻ audio ẩn -->
+              <audio
+                id="audioPlayer"
+                src="Audio/Alan Walker (ALL FALLS DOWN).mp3"
+              ></audio>
+              <!-- Biểu tượng Play -->
               <li class="nav-item icon">
-                <a class="nav-link active" href="#">
-                  <i class="fa-solid fa-play"></i>
+                <a class="nav-link active" href="#" onclick="toggleAudio()">
+                  <i class="fa-solid fa-play" id="playIcon"></i>
                 </a>
               </li>
               <li class="nav-item icon">
@@ -158,7 +164,8 @@
       let songs = [];
       let currentIndex = 0;
       let selectedIndex = -1; // Variable to track selected suggestion
-
+      let audio = document.getElementById("audioPlayer");
+      let playIcon = document.getElementById("playIcon");
       async function loadSongs() {
         try {
           const response = await fetch("data.json");
@@ -282,6 +289,17 @@
         .addEventListener("keydown", handleKeyPress);
 
       loadSongs();
+      function toggleAudio() {
+        if (audio.paused) {
+          audio.play();
+          playIcon.classList.remove("fa-play");
+          playIcon.classList.add("fa-pause");
+        } else {
+          audio.pause();
+          playIcon.classList.remove("fa-pause");
+          playIcon.classList.add("fa-play");
+        }
+      }
     </script>
   </body>
 </html>
