--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -34,15 +34,14 @@
             <ul
               class="navbar-nav me-5 mb-2 mb-lg-0 d-flex justify-content-between w-100"
             >
-              <!-- Các phần tử khác ở đây -->
-              <!-- Thêm thẻ audio ẩn -->
+              <!-- OFFICIAL AUDIO -->
               <audio id="audioPlayer"></audio>
-              <!-- Biểu tượng Play -->
               <li class="nav-item icon">
                 <a class="nav-link active" href="#" onclick="toggleAudio()">
                   <i class="fa-solid fa-play" id="playIcon"></i>
                 </a>
               </li>
+              <!-- COVER AUDIO -->
               <li class="nav-item icon">
                 <a class="nav-link" href="#">
                   <i class="fa-solid fa-microphone-lines"></i>
