--- a/WEB NHẠC/index.html
+++ b/WEB NHẠC/index.html
@@ -139,22 +139,22 @@
     <div class="icon-bar d-lg-none bg-primary px-5 py-2">
       <!-- Audio Player -->
       <audio id="mobileAudioPlayer"></audio>
-      <a href="#" class="icon" onclick="toggleAudioMobile()">
+      <a href="#" class="icon-phone" onclick="toggleAudioMobile()">
         <i class="fa-solid fa-play" id="playIconMobile"></i>
       </a>
-      <a href="#" class="icon">
+      <a href="#" class="icon-phone">
         <i class="fa-solid fa-microphone-lines"></i>
       </a>
-      <a href="#" class="icon">
+      <a href="#" class="icon-phone">
         <i class="fa-solid fa-guitar"></i>
       </a>
-      <a href="#" class="icon">
+      <a href="#" class="icon-phone">
         <i class="fa-solid fa-drum"></i>
       </a>
-      <a href="#" class="icon">
+      <a href="#" class="icon-phone">
         <i class="fa-solid fa-file-audio"></i>
       </a>
-      <a href="#" class="icon">
+      <a href="#" class="icon-phone">
         <i class="fa-solid fa-keyboard"></i>
       </a>
     </div>
